WIP: basic betting operation (no resilience)
